2005-10-24  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/network.h: Include <string.h> to stop warnings.

2005-10-23  Andrew Lunn  <andrew.lunn@ascom.ch>

	* test/nc*_test_master.c: gettimeofday is now in POSIX

2005-10-13  Andrew Lunn  <andrew.lunn@ascom.ch>

	* docs/manpages/sys/socketpair.2: Removed this man page since
	socketpair(2) is not supported.
 
2005-09-16  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/server_test.c: use socklen_t.
	* tests/nc_test_slave.c: use socklen_t and diag_print type fixes
	to stop warnings with gcc4.x
	* tests/tcp_echo.c: use socklen_t and diag_print type fixes to
	stop warnings with gcc4.x
	* tests/ping_test.c: use socklen_t.
	* tests/dhcp_test.c: use socklen_t.
	
2005-09-05  David Vrabel  <dvrabel@arcom.com>
            Andrew Lunn   <andrew.lunn@ascom.ch>
	
	* src/tftp_client.c, include/tftp_support.h: const parameters
	where appropriate.
	* doc/tcpip.sgml: Update for the above.
 
2005-08-02  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/ping_lo_test.c (ping_host): Use socklen_t to avoid
	compiler warnings.
	* tests/tcp_lo_test.c (server): Ditto	
	* tests/udp_lo_test.c (server): Ditto
	* tests/tcp_lo_select.c (server): Ditto

2005-07-29  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/tftp_dummy_file.c: unsigned char when needed to prevent warnings.
	* src/tftp_server.c: fromlen in recvfrom should be of socklen_t.
	* src/tftp_client.c: fromlen in recvfrom should be of socklen_t.
	* src/dhcp_prot.c (do_dhcp): Casts etc so that it compiles cleanly
	with gcc4.0

2005-03-27  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/tftp_server.c (tftpd_server): Fixed compiler warning about
	type of argument to printf.
	
2004-10-04  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/tftp_support.h: Use the definitions of O_RDONLY and
	O_WRONLY from fcntl.h instead of defining them ourselves. 

2004-06-17  Oyvind Harboe  <oyvind.harboe@zylin.com>

	* src/tftp_server.c:
	* cdl/net.cdl: Made tftp server stack size configurable via cdl.
